# OpenEnv-for-Data-cleaning

./: .gitignore
data_cleaning_env/: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  pyproject.toml
data_cleaning_env/server/: Dockerfile  app.py  data_cleaning_env_environment.py
data_cleaning_env/server/tasks/: __init__.py  task1_type_fixes.py  task2_normalization.py  task3_dedup.py
